--- a/WeatherApp/WeatherApp.csproj
+++ b/WeatherApp/WeatherApp.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\Common.cs" />
+    <Compile Include="Helper\Help.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Model\WMap.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
